--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "donato-will": {
+    "me": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/donato-will",
+            "outputPath": "dist/me",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -64,19 +64,19 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "donato-will:build",
+            "browserTarget": "me:build",
             "ssl": false
           },
           "configurations": {
             "production": {
-              "browserTarget": "donato-will:build:production"
+              "browserTarget": "me:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "donato-will:build"
+            "browserTarget": "me:build"
           }
         },
         "test": {
@@ -113,15 +113,15 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "donato-will:serve"
+            "devServerTarget": "me:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "donato-will:serve:production"
+              "devServerTarget": "me:serve:production"
             }
           }
         }
       }
     }},
-  "defaultProject": "donato-will"
+  "defaultProject": "me"
 }
